--- a/templates/cam_template.html
+++ b/templates/cam_template.html
@@ -1,9 +1,9 @@
 <html>
    <body>
-      <form action = "http://localhost:5000" method = "POST" 
+      <form action = "http://localhost:5000/webcam" method = "POST" 
          enctype = "multipart/form-data">
-         <label for = "file"> Select student card image </label>
-         <input type = "file" name = "file" />
+         <label for = "cam_image_file"> Select webcam image </label>
+         <input type = "file" name = "cam_image_file" />
          <label for = "student_id"> Your studentId </label>
 	 <input type = "text" name = "student_id" />
          <input type = "submit"/>
